[package]
name = "argmm"
version = "0.1.0"
authors = ["minimalrust <minimalrustdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.0"
rand = "0.7.2"
rand_distr = "0.2.2"

[[bench]]
name = "bench_f32"
harness = false

[[bench]]
name = "bench_i32"
harness = false

[profile.release]
debug = true