[package]
name = "argmm"
version = "0.1.2"
authors = ["minimalrust <minimalrustdev@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/minimalrust/argmm.git"
description = "Argmin and argmax with SIMD support for u8, u16, i16, i32 and f32"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"

[[bench]]
name = "bench_f32"
harness = false

[[bench]]
name = "bench_i32"
harness = false

[[bench]]
name = "bench_i16"
harness = false

[[bench]]
name = "bench_u16"
harness = false

[[bench]]
name = "bench_u8"
harness = false

